# AIWF

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: aiwf-verify.yml
docs/: README.md
docs/architecture/: 2026-03-06-current-architecture-baseline.md  2026-03-10-aiwf-value-and-constraint-analysis.md  2026-03-10-cli-runtime-helper-consolidation.md  2026-03-10-m1-product-boundary-and-entrypoint.md
docs/current/: agent-development-loop.md  current-work-state.md  implementation-status.md  module-task-list.md  project-structure.md
docs/guide/: 2026-03-06-aiwf-framework-intro-and-usage-zh.md
docs/plans/: 2026-03-05-aiwf-phased-development.md  2026-03-06-aiwf-core-hardening-implementation-plan.md  2026-03-06-aiwf-self-hosting-direction-plan.md  2026-03-11-run-centered-dispatch-skeleton.md
docs/process/: 2026-03-06-closed-loop-flow-map.md  2026-03-06-development-playbook.md  2026-03-06-governance-and-stage-gates.md  2026-03-06-multi-role-sop.md  (+2 more)
schemas/: README.md  develop_record.schema.json  dispatch_record.schema.json  gate_result.schema.json  plan.schema.json  project_map.schema.json  risk_register.schema.json  role_workflow.schema.json  run_record.schema.json  state.schema.json  task_record.schema.json  task_spec.schema.json  task_verify.schema.json
tests/: test_cli.py  test_contract_schemas.py  test_docs_workflow.py  test_run_artifacts.py  test_runtime_checks.py  test_runtime_plan.py  test_runtime_risk.py  test_runtime_roles.py  test_runtime_state.py  test_task_engine.py  test_task_store.py  test_workflow_engine.py
(+21 files in other folders)
